* Improved navigation styling * Additional page: overview * Improved "previewability"

--- a/WinkelPlanner/trunk/src/witspirit/appengine/winkelplanner/web/common/BasePage.html
+++ b/WinkelPlanner/trunk/src/witspirit/appengine/winkelplanner/web/common/BasePage.html
@@ -39,7 +39,8 @@
     		
     		<div class="navigation-menu">
     			<ul>
-    				<li><a wicket:id="listsLink" href="#"><wicket:message key="application.nav.home">[home]</wicket:message></a></li>
+    				<li><a wicket:id="overviewLink" href="#"><wicket:message key="application.nav.overview">[overview]</wicket:message></a></li>
+    				<li><a wicket:id="listsLink" href="#"><wicket:message key="application.nav.lists">[lists]</wicket:message></a></li>
     				<li><a wicket:id="productsLink" href="#"><wicket:message key="application.nav.products">[products]</wicket:message></a></li>
     				<li><a wicket:id="shopsLink" href="#"><wicket:message key="application.nav.shops">[shops]</wicket:message></a></li>
     			</ul>
