* Introduced Login Status Panel * Introduced Guice for dependency injection * Upgraded gae plugin and runtime to have proper support for 1.4.0

--- a/WinkelPlanner/trunk/be.witspirit.winkelplanner.web/src/main/java/be/witspirit/winkelplanner/web/common/BasePage.html
+++ b/WinkelPlanner/trunk/be.witspirit.winkelplanner.web/src/main/java/be/witspirit/winkelplanner/web/common/BasePage.html
@@ -40,7 +40,7 @@
 			
 		<div id="header-links">
 			<p>
-			<a href="HomePage.html">Home</a>
+			<span wicket:id="login-status">[Login Status]</span>
 			</p>		
 		</div>		
 						
